archive-policies/psa-restricted-audit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-restricted-audit
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: psa-restricted
    match:
      resources:
        kinds:
        - Pod
    validate:
      podSecurity:
        level: "restricted"
        version: "latest"
